--- a/mdfinder/App.config
+++ b/mdfinder/App.config
@@ -27,6 +27,15 @@
       <setting name="FilesFoundAlert" serializeAs="String">
         <value>25</value>
       </setting>
+      <setting name="SkipEmptyFiles" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ProviderFolder" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Language" serializeAs="String">
+        <value>en-US</value>
+      </setting>
     </mdfinder.Properties.Settings>
   </userSettings>
 </configuration>
