Ugly Safety Checkin
Everything works. Mostly. It is kinda of flimsy so it needs to be cleaned up.

--- a/mdfinder/App.config
+++ b/mdfinder/App.config
@@ -36,6 +36,9 @@
       <setting name="Language" serializeAs="String">
         <value>en-US</value>
       </setting>
+      <setting name="ArchiveFolder" serializeAs="String">
+        <value />
+      </setting>
     </mdfinder.Properties.Settings>
   </userSettings>
 </configuration>
