--- a/mdfinder/packages.config
+++ b/mdfinder/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="csmic" version="1.1.4" targetFramework="net461" />
+  <package id="Gu.Wpf.Media" version="0.5.0.2" targetFramework="net461" />
   <package id="LiteDB" version="4.1.4" targetFramework="net461" />
   <package id="Octokit" version="0.32.0" targetFramework="net461" />
 </packages>
